# git-weekly

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.cursor/skills/git-weekly/: SKILL.md
.github/workflows/: ci.yml  release.yml
git_weekly/: __init__.py  __main__.py  analyzer.py  cli.py  i18n.py  llm.py  mcp_server.py  report.py
tests/: test_analyzer.py  test_i18n.py  test_report.py
